# ascii

./: .gitignore  GITHUB_READY.md  LICENSE  Procfile  README.md  app.py  debug_image.py  debug_shadows.py  demo.py  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.sh  tikket_ascii.py  vercel.json
FUNr/: README.md  app.py  debug_fixed.py  gemini.md  requirements.txt  tikket_ascii.py
FUNr/templates/: index.html
docs/superpowers/specs/: 2026-03-27-ascii-art-mcp-design.md
src/ascii_art_mcp/: __init__.py  engine.py  server.py
templates/: index.html
tests/: test_engine.py
